# Course-Planer

./: .gitignore  CMakeLists.txt  RelativeConditions.md  _run.bat  findbugs.xml  pmdRuleset.xml
res/: config.json  test.json  test_skillset.json
src/com/gmail/maximsmol/CoursePlanner/: ConfigData.java  Main.java
src/com/gmail/maximsmol/CoursePlanner/gui/: DraggablePanel.java  GUIUtils.java  NotAbsoluteLayout.java  RelativeListLayouter.java  ResizableButton.java  ResizableLabel.java  ResizablePanel.java  ResizableScrollPane.java  ResizableTextArea.java  ResizableTextField.java  RootGlassPane.java  Window.java
src/com/gmail/maximsmol/CoursePlanner/gui/arrows/: ArrowConnectionListener.java  ArrowConnector.java  ArrowEndConnector.java  ArrowManager.java  ArrowStartConnector.java  ArrowUIDecorator.java
src/com/gmail/maximsmol/CoursePlanner/gui/cards/: BasicDataListPane.java  BasicDataPane.java  CourseCard.java  CourseInfoCardPart.java  DictionarySkillSetListPane.java  DictionarySkillSetPane.java  DraggedSkillSetPane.java  DropAcceptingSkillSetListPane.java  SkillDictionary.java  SkillGroupWindow.java  SkillSetListPane.java  SkillSetPane.java
src/com/gmail/maximsmol/CoursePlanner/gui/relativeComponents/: CanSizeSelf.java  FullyRelativeComponent.java  RelativeContainer.java  RelativelyBounded.java  RelativelyLayouted.java  RelativelyLocated.java  RelativelyResizable.java
src/com/gmail/maximsmol/CoursePlanner/gui/winsys/: BasicWindow.java  DialogUtils.java  ImportDialog.java  TextEditDialog.java  WinsysEvent.java  WinsysEventListener.java
src/com/gmail/maximsmol/CoursePlanner/model/: Course.java  Database.java  DescribedElement.java  InvalidModelException.java  LeveledSkill.java  ModelChangeEvent.java  ModelChangeEventListener.java  ModelWatcher.java  Skill.java  SkillLevel.java  SkillSet.java  SkillSetList.java
